kubernetes/Cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis 
  namespace: app-namespace 
spec:
  selector:
    app: redis-app 
  ports:
    - name: http 
      port: 6379
      protocol: TCP 
      targetPort: 6379

---

apiVersion: v1
kind: StatefulSet 
metadata: 
  name: redis-database 
  namespace: app-namespace 
spec:
  selector:
    matchLabels:
      app: redis-app 
  template:
    metadata:
      labels:
        app: redis-app 
    spec:
      terminationGracePeriodSeconds: 60 
      containers:
        - name: redis-container 
          image: redis 
          ports:
            - containerPort: 6379 
              protocol: TCP 
          imagePullPolicy: IfNotPresent 
          volumeMounts:
            - name: redis-config
              mount: /etc/redis/redis.conf 
              readOnly: true 

      volumes:
        - name: redis-config 
          configMap:
            - name: redis-config-map 
              namespace: app-namespace 
              items:
                key: redis.conf 
                subPath: redis.conf
