kubernetes/Database.yaml
apiVersion: v1
kind: Service 
metadata:
  name: postgres 
  namespace: app-namespace 
spec:
  selector:
    app: postgres-app 
  ports:
    - name: http 
      port: 5432
      targetPort: 5432
      protocol: TCP 

---

apiVersion: v1
kind: StatefulSet 
metadata:
  name: postgres-database 
  namespace: app-namespace 
spec:
  selector:
    matchLabels:
      app: postgres-app 
  template:
    metadata:
      labels:
        app: postgres-app 
    spec:
      terminationGracePeriodSeconds: 60 
      containers:
        - name: postgres-container 
          image: postgres:latest 
          ports:
            - containerPort: 5432
              protocol: TCP 
          imagePullPolicy: IfNotPresent
