kubernetes/Jenkins.yaml
apiVersion: v1
kind: Service 
metadata:
  name: jenkins 
  namespace: jenkins-namespace 
spec:
  type: ClusterIP 
  selector:
    app: jenkins-app 
  ports:
    - name: httpport
      port: 8090
      targetPort: 8090
      protocol: TCP
      
    - name: jmlpport 
      port: 50000 
      targetPort: 50000 
      protocol: TCP 
---

apiVersion: v1
kind: Deployment 
metadata:
  name: jenkins-server 
  namespace: jenkins-namespace 
spec:
  selector:
    app: jenkins-app 
  template:
    metadata:
      labels:
        app: jenkins-app 
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: jenkins-server 
          image: jenkins/jenkins 
          securityContext:
            runAsUser: 0 
            runAsGroup: 0 
          ports:
            - name: httpport 
              containerPort: 8090 
              protocol: TCP 

            - name: jmlpport 
              containerPort: 8090 
              protocol: TCP 

          imagePullPolicy: IfNotPresent 
          resources: 
            limits:
              cpu: "0.5"
