kubernetes/Metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics 
  namespace: default 
spec:
  selector:
    app: metrics-app 
  ports:
    - name: http 
      port: 10000 
      targetPort: 10000 
---

apiVersion: v1
kind: DaemonSet
metadata:
  name: metrics-daemon-set 
  namespace: default 
spec:
  selector:
    matchLabels:
      app: metrics-app 
    template:
      metadata:
        labels:
          app: metrics-app 
      spec:
        terminationGracePeriodSeconds: 20
        containers: 
          - name: metrics-app-container 
            image: crazycoderrr/metrics_service 
            ports: 
              - containerPort: 10000 
                protocol: TCP 
            imagePullPolicy: IfNotPresent
