kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: infrastracture-ingress-network 
  namespace: ingress-nginx 
  annotations:
    kubernetes.io/class: infra-network 
spec:
  rules:
    tls: 
      secretName: tls-ssl-secret 
      hosts:  
        - www.cloud-infrastructure.com 
    host: www.cloud-infrastructure.com 
      http:
        paths:
          path: / 
          pathType: Prefix 
            backend: 
              serviceName: front-app-service 
              servicePort:
                number: 3000
