kubernetes/NetworkPolices.yaml
# Network Policy for Managing the Traffic Between Kubernetes Cluster (where this application is basically running)
# and the Datacenter Network, so we can have a isolated Connection with them

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: ingress-network-policy 
  namespace: app-namespace 
spec:
  policyTypes:
    - Egress
  egress:
    to: 
      - namespaceSelector:
          matchLabels:
            networking/namespace: application-namepspace

        podSelector:
          matchLabels:
            k8s-app: cloud-infrastructure-app 
            networking/allow-internet-egress: "true"
          
    ports: # Setting up ports for the Ingress Traffic Policies
      - name: http 
        port: 9000 
        protocol: TCP
